--- a/dataviva/static/css/styles.rankings.css
+++ b/dataviva/static/css/styles.rankings.css
@@ -42,5 +42,4 @@ div#iframe {
 iframe {
   border-top: 1px solid #ccc;
   min-height: 151px;
-  width: 100%;
 }
